--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "start_tem",
+  "name": "marshrutnyy_list",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
@@ -34,9 +34,7 @@
     {
       "path": "#source/index.kit",
       "imports": [
-        "#source/header.kit",
-        "#source/footer.kit",
-        "#source/js.kit"
+        "#source/header.kit"
       ]
     },
     {
